--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <container>
     <h1>clean</h1>
-        <h3>https://teespring.com/stores/clean2020</h3>
+    <a href="https://teespring.com/stores/clean2020/" target="_blank"><h3>clean.com</h3></a>
     
     <!-- CONTACT !-->
     <section>
