--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <container>
     <h1>clean</h1>
-    <a href="https://teespring.com/stores/clean2020/" target="_blank"><h3>clean.com</h3></a>
+    <a href="https://teespring.com/stores/clean2020/" target="_blank"><h3>Buy our gear here</h3></a>
     
     <!-- CONTACT !-->
     <section>
@@ -26,10 +26,7 @@
         <h2 id="contact" data-scroll-id="contact-us" tabindex="-1" style="outline: none;">Contact Me</h2>
             <a href="mailto:matthewspelman@gmail.com?subject=Pleasure%20to%20meet%20you&amp;body=Hi%20Matt," rel="noopener noreferrer" target="_blank">
                 <i class="material-icons">mail_outline</i>
-            </a>  
-            <a href="https://github.com/matthewspelman" rel="noopener noreferrer" target="_blank">
-                <i class="material-icons">code</i>
-            </a>      
+            </a>     
     </section>
 
 
